<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Resultado68">

    <Button
        android:id="@+id/iniciobt"
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:layout_above="@+id/defesabt"
        android:layout_alignParentStart="true"
        android:background="#305d97"
        android:text="@string/inicial"
        android:textColor="#ffffff"
        android:textStyle="italic"
        android:layout_marginTop="2dp"/>

    <Button
        android:id="@+id/defesabt"
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:layout_above="@+id/provasbt"
        android:layout_alignParentStart="true"
        android:background="#b641a2"
        android:text="@string/defesa"
        android:textColor="#ffffff"
        android:textStyle="italic"
        android:layout_marginTop="2dp"/>

    <Button
        android:id="@+id/provasbt"
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:layout_above="@+id/sentencabt"
        android:layout_alignParentStart="true"
        android:background="#ff2886 "
        android:text="@string/provas"
        android:textColor="#ffffff"
        android:textStyle="italic"
        android:layout_marginTop="2dp"/>

    <Button
        android:id="@+id/sentencabt"
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="#309730"
        android:text="@string/sentenca"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_marginTop="2dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/exBt68" />


</RelativeLayout>