<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConsultaSimples">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="182dp"
        android:layout_height="154dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        app:srcCompat="@drawable/logotrans"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="35dp" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:orientation="horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="6dp"
        >

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_weight="7"
            android:checked="true"
            android:text="@string/nome" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_weight="5"
            android:text="@string/adv" />
        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_weight="9"
            android:text="@string/nprocesso" />
    </RadioGroup>



    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="261dp"
        android:background="#828282"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/exnome"
        android:textColor="#ffffff"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="260dp" />

    <Button
        android:id="@+id/buscaBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="290dp"
        android:text="@string/busca" />


</RelativeLayout>